#https://grok.com/chat/8c910b33-2987-4a2d-925a-4d5e3446d68c

[build-system]
# requires = ["hatchling>=1.25.0"]
# build-backend = "hatchling.build"
requires = ["setuptools>=40.8.0", "wheel", "anson.py3>=0.2.5"]
build-backend = "setuptools.build_meta"

[project]
name = "anclient.py3"
version = "0.1.4"
description = "Semantic-jserv Python Client with bundled io.odysz.* data"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{name = "Ody Z", email = "odys.zhou@gmail.com"}]
keywords = ["Semantics", "AnClient", "Semantier"]
requires-python = ">=3.9"
dependencies = [
    "anson.py3>=0.2.5",
    "requests",
    "typing_extensions"
]

[project.scripts]
anclient-init = "anclient.unpack_data:main"

# [tool.hatch.build.targets.wheel]
# packages = ["src/anclient"]
# include = ["src/anclient"]

[tool.setuptools]
packages = ["anclient", "src.io"]
package-dir = { "anclient" = "src/anclient", "src.io" = "src/io" }
package-data = { "anclient" = ["**/*.py"], "src.io" = ["**/*.py"] }

# [tool.hatch.build.hooks.custom]
# path = "move_anson.py"
#[tool.hatch.build.targets.wheel.data]
#"anclient/data" = ["src/io/**/*.py"]
